--- a/src/sections/section2.css
+++ b/src/sections/section2.css
@@ -150,9 +150,8 @@
   height: 30px;
   color: #fff;
   background-color: #391459;
-  /* font-weight: bold; */
   padding-bottom: 2px;
-  transition: transform 0.2s ease;
+  transition: transform 0.4s ease;
 }
 
 .faq-icon.open {
@@ -160,9 +159,19 @@
 }
 
 .faq-answer {
-  padding: 15px 20px;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
   font-size: 16px;
   color: #444;
   background: #fafafa;
   border-top: 1px solid #eee;
+  padding: 0 20px; /* start me padding 0 (hidden) */
+  transition: max-height 0.4s ease, opacity 0.6s ease, padding 0.4s ease;
+}
+
+.faq-answer.open {
+  max-height: 500px; /* large enough to fit answer */
+  opacity: 1;
+  padding: 15px 20px; /* open hone par normal padding */
 }
