--- a/src/sections/section.css
+++ b/src/sections/section.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-/* Section styling */
+/* --------------------------- circular carousel */
+
 .carousel-section {
   min-height: 100vh;
   background: #f7f7f7;
@@ -105,7 +106,6 @@
   }
 }
 
-
 /* Circular carousel */
 .carousel-wrapper {
   position: relative;
@@ -141,13 +141,13 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(var(--angle)) translateY(-420px)rotate(calc(-1 * var(--angle)));
+  transform: translate(-50%, -50%) rotate(var(--angle)) translateY(-380px)rotate(calc(-1 * var(--angle)));
   transition: transform 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .carousel-item img {
-  width: 140px;
-  height: 140px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   object-fit: cover;
   border: 3px solid white;
@@ -244,7 +244,8 @@
   gap: 10px;
   margin-top: 10px;
   margin-right: 10px;
-  padding: 8px 14px;
+  width: 160px;
+  padding: 8px 0 8px 14px;
   border: none;
   border-radius: 999px; 
   background: #f2f2f2;
