--- a/src/components/style.css
+++ b/src/components/style.css
@@ -18,7 +18,6 @@
 .navbar-items a:hover{
   color: #fff;
   background-color: #391459;
-  /* border-radius: 20px; */
 }
 
 .animated-btn {
@@ -27,18 +26,16 @@
   background-color: #391459;
   border: none;
   color: white;
-  padding: 10px 20px;     /* thoda aur width ke liye */
-  min-width: 220px;       /* force width */
+  padding: 10px 20px;     
+  min-width: 220px;       
   border-radius: 20px;
   cursor: pointer;
   font-size: 14px;
   font-weight: 500;
 }
-
-
 .btn-text {
   display: block;
-  white-space: nowrap;   /* 🚀 prevent 2 lines */
+  white-space: nowrap;  
   transition: transform 0.3s ease-in-out;
 }
 
@@ -136,15 +133,13 @@
 
 #heading-text{
     font-size:4.2rem;
-    /* text-align: start; */
     margin-top: 30px;
     font-weight: 700;
     color: #000;
 }
 #heading-para{
-    /* text-align: start; */
     font-size: 1.2rem;
-    padding: 0 210px 0 0;
+    padding: 0 45px 0 45px;
     margin-top: 30px;
     font-weight: 500;
     color: rgb(138, 135, 138);
@@ -162,8 +157,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
   width: 270px;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin: 40px auto 10px auto;
 }
 
 .main-cta img {
@@ -253,4 +247,30 @@
   z-index: 9999;
   pointer-events: none;
   transition: transform 0.1s linear, opacity 0.3s ease-out;
+}
+
+
+/* ----------------------responsive for mobile */
+
+@media (max-width: 490px) {
+  .scroll-text {
+  padding: 0 12px;
+  text-align: justify;
+  }
+
+.scroll-text h4 span {
+  font-size: 26px;
+  }
+
+  #heading-text{
+    font-size: 2.2rem;
+  }
+  #heading-para{
+    padding: 0;
+  }
+  .main-cta{
+    margin: auto;
+  }
+
+
 }
